k8s/kustomize/arr/base/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media-server
spec:
  selector:
    app: jellyfin
  ports:
  - protocol: TCP
    port: 8096
    targetPort: 8096
  type: ClusterIP
